--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "supabase": "^2.20.12"
   },
   "devDependencies": {
